--- a/Downloads/CS4731_LightingExample/CS4731_LightingExampleStarter/shadedSphere1.html
+++ b/Downloads/CS4731_LightingExample/CS4731_LightingExampleStarter/shadedSphere1.html
@@ -12,7 +12,9 @@ uniform vec4 diffuseProduct, specularProduct, ambientProduct;
 uniform vec4 lightPosition;
 uniform float shininess;
 
+attribute vec4 vPos;
 varying vec4 fColor;
+uniform float a;
 
 
 void main()
@@ -30,10 +32,17 @@ void main()
 
     //Ambient
     vec4 ambient = ambientProduct;
-
+    if(a== 1.0){
     gl_Position = projectionMatrix * modelViewMatrix * vPosition;
 	fColor = diffuse + specular + ambient;
 	fColor.a = 1.0;
+	}
+	if(a == 0.0){
+	gl_Position = vPos;
+	gl_PointSize=100.0;
+	fColor = vec4(1.0,1.0,1.0,1.0);
+	}
+
 }
 </script>
 
