fixed runtime issues and added new algo for animation

--- a/Downloads/Proj1Pt2/CS4731_LightingExampleStarter/shadedSphere1.html
+++ b/Downloads/Proj1Pt2/CS4731_LightingExampleStarter/shadedSphere1.html
@@ -22,7 +22,7 @@ varying vec3 L,N,V;
 void main()
 {
     //Diffuse
-    vec3 pos = (modelViewMatrix * flatShading).xyz;
+    vec3 pos = (modelViewMatrix * vPosition).xyz;
     vec3 N = normalize(modelViewMatrix * vNormal).xyz;
     vec3 L = normalize(lightPosition.xyz - pos);
     //Specular
